fixing bug & edit content

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
       >
         <span>Toko Kadal</span>
       </a>
-      <p>Jangan beli kalo gak mau dikadalin</p>
+      <p>Kalo gak kadal ya buaya</p>
     </div>
   </div>
 </footer>
